--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">Game</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Shipwreck</string>
 </resources>
